@@ -22,6 +22,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - don't fall over when duplicate subnodes are assigned after suspend-resume
   b - handle suspended jobs correctly when restarting pbs_server
   b - allow long host lists in runjob request
+  b - fix truncated XML output in qstat and pbsnodes
 
 2.1.1
 
